Added Comments in project

--- a/Assignment-2/YT-Music.html
+++ b/Assignment-2/YT-Music.html
@@ -1,13 +1,21 @@
+<!--
+    Name: Paras Kumar Sharma
+    PRN: 23030124225
+    Name of project: YouTube Music Player
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-16">
     <title>YT-Music-Replica</title>
+    <!--CSS files-->
     <link rel="stylesheet" href="YT-Music-files/styles/top-bar.css">
     <link rel="stylesheet" href="YT-Music-files/styles/side-bar.css">
     <link rel="stylesheet" href="YT-Music-files/styles/main-content.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!--Roboto font import-->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
 </head>
@@ -62,6 +70,7 @@
     </div>
     <!--Main content of page-->
     <div class="main-content-audio">
+        <!--Right side of the page-->
         <div class="right-section">
             <div class="audio-image"><img src="YT-Music-files/images/thumbnails/thumbnail-1.jpg"></div>
             <div class="audio-player"><audio controls>
@@ -69,6 +78,7 @@
                 </audio></div>
             <div class="audio-title">Rondeau des fleurs et des rapieres</div>
         </div>
+        <!--Left side of the page-->
         <div class="left-section">
             <div class="audio-navigation">
                 <button>UP Next</button>
@@ -80,6 +90,7 @@
                 <button>Familier</button>
                 <button>Instrumental</button>
             </div>
+            <!--Shows songs recomendations-->
             <div class="audio-recomendation">
                 <div class="audio-recomendation-container">
                     <div class="reco-audio-image-title-author">
@@ -177,3 +188,5 @@
 </body>
 
 </html>
+
+<!--Thank You-->
