--- a/Assignment-2/login-page.html
+++ b/Assignment-2/login-page.html
@@ -1,3 +1,9 @@
+<!--
+    Name: Paras Kumar Sharma
+    PRN: 23030124225
+    Name of project: Login and Register Page
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,4 +34,7 @@
         </div>
     </div>
 </body>
+
 </html>
+
+<!--Thank You-->
