--- a/Assignment-1/student-information.html
+++ b/Assignment-1/student-information.html
@@ -1,12 +1,23 @@
+<!--
+    Name: Paras Kumar Sharma
+    PRN: 23030124225
+    Name of project: Student Information page in regional language
+-->
+
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-16">
     <title>Student Information</title>
 </head>
+
 <body style="display: flex;flex-direction: column;align-items: center;" >
     <div class="f-name">पहला नाम: पारस कुमार</div>
     <div class="l-name">अंतिम नाम: शर्मा</div>
     <div class="city-name">शहर: गुरूग्राम</div>
 </body>
+
 </html>
+
+<!--Thank You-->
