--- a/Assignment-1/admission-form.html
+++ b/Assignment-1/admission-form.html
@@ -79,7 +79,7 @@
                 <option value="mba-it">MBA-IT</option>
             </select>
             <input class="hobbies" placeholder="Your Hobbies">
-            <button class="submit-button">Submit</button>
+            <button class="submit-button" onclick="alert('Yoru form has been submitted Successfully \n\nThank You!');">Submit</button>
         </div>
     </div>
 </body>
