--- a/Assignment-2/login register files/login-page.html
+++ b/Assignment-2/login register files/login-page.html
@@ -21,7 +21,7 @@
 
 <body>
     <header>
-        <h2 class="logo">Logo</h2>
+        <h2 class="logo">Companey Logo</h2>
         <nav class="top-bar">
             <a href="#">Home</a>
             <a href="#">About</a>
@@ -31,7 +31,6 @@
         </nav>
     </header>
     <div class="wrapper">
-        <span class="icon-close"><ion-icon name="close"></ion-icon></span>>
         <div class="form-box login">
             <h2>Login</h2>
             <form action="#">
@@ -63,6 +62,16 @@
                 <div class="input-box">
                     <span class="icon"><ion-icon name="person"></ion-icon></span>
                     <input type="text" required>
+                    <label>First Name</label>
+                </div>
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="person"></ion-icon></span>
+                    <input type="text" required>
+                    <label>Last Name</label>
+                </div>
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="person"></ion-icon></span>
+                    <input type="text" required>
                     <label>Username</label>
                 </div>
                 <div class="input-box">
@@ -75,19 +84,25 @@
                     <input type="password" required>
                     <label>Password</label>
                 </div>
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
+                    <input type="password" required>
+                    <label>Password</label>
+                </div>
                 <div class="remember-forgot">
                     <label><input type="checkbox">
-                        I agree to terms and conditions</label>
+                        I agree to the Terms & Conditions</label>
                 </div>
                 <button class="btn" type="submit">Register</button>
                 <div class="login-register">
-                    <p>Already have an account?<a href="#" class="login-link">Sign in</a></p>
+                    <p>Already have an account?<a href="#" class="login-link">Login</a></p>
                 </div>
             </form>
         </div>
     </div>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script src="login.js"></script>
 </body>
 
 </html>
