--- a/Assignment-2/login register files/login-page.html
+++ b/Assignment-2/login register files/login-page.html
@@ -87,7 +87,7 @@
                 <div class="input-box">
                     <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
                     <input type="password" required>
-                    <label>Password</label>
+                    <label>Confirm Password</label>
                 </div>
                 <div class="remember-forgot">
                     <label><input type="checkbox">
