fixed the projects

--- a/Assignment-2/youtube-files/YouTube-player.html
+++ b/Assignment-2/youtube-files/YouTube-player.html
@@ -10,9 +10,9 @@
 <head>
     <meta charset="UTF-16">
     <title>YouTube-Replica</title>
-    <link rel="stylesheet" href="youtube-files/styles/side-bar.css">
-    <link rel="stylesheet" href="youtube-files/styles/top-bar.css">
-    <link rel="stylesheet" href="youtube-files/styles/video.css">
+    <link rel="stylesheet" href="styles/side-bar.css">
+    <link rel="stylesheet" href="styles/top-bar.css">
+    <link rel="stylesheet" href="styles/video.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
@@ -21,45 +21,45 @@
 <body>
     <div class="top-bar">
         <div class="left-section">
-            <img class="hamburger-menu" src="youtube-files/images/icons/hamburger-menu.svg">
-            <img class="youtube-logo" src="youtube-files/images/icons/kyotube-logo.png">
+            <img class="hamburger-menu" src="images/icons/hamburger-menu.svg">
+            <img class="youtube-logo" src="images/icons/kyotube-logo.png">
         </div>
         <div class="middle-section">
             <input class="search-bar" type="text" placeholder="Search">
-            <button class="search-button"><img class="search-icon" src="youtube-files/images/icons/search.svg"></button>
+            <button class="search-button"><img class="search-icon" src="images/icons/search.svg"></button>
             <button class="voice-search-button"><img class="voice-search-icon"
-                    src="youtube-files/images/icons/voice-search-icon.svg"></button>
+                    src="images/icons/voice-search-icon.svg"></button>
         </div>
         <div class="right-section"><img class="">
-            <img class="upload-icon" src="youtube-files/images/icons/upload.svg" alt="">
-            <img class="youtube-app-icon" src="youtube-files/images/icons/youtube-apps.svg">
-            <img class="notification-icon" src="youtube-files/images/icons/notifications.svg" alt="">
-            <img class="my-profile-picture" src="youtube-files/images/profile-picture/my-channel.jpeg" alt="">
+            <img class="upload-icon" src="images/icons/upload.svg" alt="">
+            <img class="youtube-app-icon" src="images/icons/youtube-apps.svg">
+            <img class="notification-icon" src="images/icons/notifications.svg" alt="">
+            <img class="my-profile-picture" src="images/profile-picture/my-channel.jpeg" alt="">
         </div>
     </div>
     <div class="side-bar-menu">
         <div class="side-bar">
-            <img src="youtube-files/images/icons/home.svg">
+            <img src="images/icons/home.svg">
             <div>Home</div>
         </div>
         <div class="side-bar">
-            <img src="youtube-files/images/icons/explore.svg">
+            <img src="images/icons/explore.svg">
             <div>Explore</div>
         </div>
         <div class="side-bar">
-            <img src="youtube-files/images/icons/subscriptions.svg">
+            <img src="images/icons/subscriptions.svg">
             <div>Subscriptions</div>
         </div>
         <div class="side-bar">
-            <img src="youtube-files/images/icons/originals.svg">
+            <img src="images/icons/originals.svg">
             <div>Originals</div>
         </div>
         <div class="side-bar">
-            <img src="youtube-files/images/icons/youtube-music.svg">
+            <img src="images/icons/youtube-music.svg">
             <div>YouTube Music</div>
         </div>
         <div class="side-bar">
-            <img src="youtube-files/images/icons/library.svg">
+            <img src="images/icons/library.svg">
             <div>Library</div>
         </div>
     </div>
@@ -67,14 +67,14 @@
         <div class="current-video">
             <div>
                 <video class="video-play" controls="controls">
-                    <source src="youtube-files/images/video/Red birb.mp4" type="video/mp4" />
+                    <source src="images/video/Red birb.mp4" type="video/mp4" />
             </div>
             <div class="about-video">
                 <div class="video-title">Red Parrot doing HUIHUIHUIHUI</div>
                 <div class="video-interface">
                     <div class="interface-left-section">
                         <div class="author-image-div"><img class="author-image"
-                                src="youtube-files/images/profile-picture/jod.png" /></div>
+                                src="images/profile-picture/jod.png" /></div>
                         <div class="author-name-subscribers">
                             <div class="author-name">Mr. Red Parrot</div>
                             <div class="author-subscribers">432k Subscribers</div>
@@ -83,11 +83,11 @@
                     </div>
                     <div class="interface-right-section">
                         <div class="like-dislike-button">
-                            <div><button class="like-button"><img src="youtube-files/images/icons/like.png" width="17px">Like</button></div>
-                            <div><button class="dislike-button"><img src="youtube-files/images/icons/dislike.png" width="17px">Dislike</button></div>
+                            <div><button class="like-button"><img src="images/icons/like.png" width="17px">Like</button></div>
+                            <div><button class="dislike-button"><img src="images/icons/dislike.png" width="17px">Dislike</button></div>
                         </div>
-                        <div><button class="share-button"><img src="youtube-files/images/icons/share.png" width="17px">Share</button></div>
-                        <div><button class="download-button"><img src="youtube-files/images/icons/download.png" width="13px">Download</button></div>
+                        <div><button class="share-button"><img src="images/icons/share.png" width="17px">Share</button></div>
+                        <div><button class="download-button"><img src="images/icons/download.png" width="13px">Download</button></div>
                     </div>
                 </div>
             </div>
@@ -95,7 +95,7 @@
         <div class="video-recommendation">
             <div class="video-recomended">
                 <div class="reco-vid-thumbnail">
-                    <img src="youtube-files/images/thumbnail/RaGa.png">
+                    <img src="images/thumbnail/RaGa.png">
                     <div class="time-count">11:23</div>
                 </div>
                 <div class="reco-vid-details">
@@ -110,7 +110,7 @@
             </div>
             <div class="video-recomended">
                 <div class="reco-vid-thumbnail">
-                    <img src="youtube-files/images/thumbnail/coke.png">
+                    <img src="images/thumbnail/coke.png">
                     <div class="time-count">23:30</div>
                 </div>
                 <div class="reco-vid-details">
@@ -125,7 +125,7 @@
             </div>
             <div class="video-recomended">
                 <div class="reco-vid-thumbnail">
-                    <img src="youtube-files/images/thumbnail/AMAY.png">
+                    <img src="images/thumbnail/AMAY.png">
                     <div class="time-count">13:32</div>
                 </div>
                 <div class="reco-vid-details">
@@ -140,7 +140,7 @@
             </div>
             <div class="video-recomended">
                 <div class="reco-vid-thumbnail">
-                    <img src="youtube-files/images/thumbnail/kota.png">
+                    <img src="images/thumbnail/kota.png">
                     <div class="time-count">15:25</div>
                 </div>
                 <div class="reco-vid-details">
@@ -155,7 +155,7 @@
             </div>
             <div class="video-recomended">
                 <div class="reco-vid-thumbnail">
-                    <img src="youtube-files/images/thumbnail/flying-tutorial.png">
+                    <img src="images/thumbnail/flying-tutorial.png">
                     <div class="time-count">9:11</div>
                 </div>
                 <div class="reco-vid-details">
@@ -170,7 +170,7 @@
             </div>
             <div class="video-recomended">
                 <div class="reco-vid-thumbnail">
-                    <img src="youtube-files/images/thumbnail/CARRY.png">
+                    <img src="images/thumbnail/CARRY.png">
                     <div class="time-count"></div>
                 </div>
                 <div class="reco-vid-details">
