--- a/Assignment-2/YT-Music-files/YT-Music.html
+++ b/Assignment-2/YT-Music-files/YT-Music.html
@@ -11,9 +11,9 @@
     <meta charset="UTF-16">
     <title>YT-Music-Replica</title>
     <!--CSS files-->
-    <link rel="stylesheet" href="YT-Music-files/styles/top-bar.css">
-    <link rel="stylesheet" href="YT-Music-files/styles/side-bar.css">
-    <link rel="stylesheet" href="YT-Music-files/styles/main-content.css">
+    <link rel="stylesheet" href="styles/top-bar.css">
+    <link rel="stylesheet" href="styles/side-bar.css">
+    <link rel="stylesheet" href="styles/main-content.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <!--Roboto font import-->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,47 +24,47 @@
     <!--Top bar of the page-->
     <div class="top-bar">
         <div class="left-section">
-            <img class="hamburger-menu" src="YT-Music-files/images/icons/hamburger-menu.svg">
-            <img class="youtube-logo" src="YT-Music-files/images/icons/kyotube-logo.png">
+            <img class="hamburger-menu" src="images/icons/hamburger-menu.svg">
+            <img class="youtube-logo" src="images/icons/kyotube-logo.png">
         </div>
         <div class="middle-section">
             <input class="search-bar" type="text" placeholder="Search">
             <button class="search-button"><img class="search-icon"
-                    src="YT-Music-files/images/icons/search.svg"></button>
+                    src="images/icons/search.svg"></button>
             <button class="voice-search-button"><img class="voice-search-icon"
-                    src="YT-Music-files/images/icons/voice-search-icon.svg"></button>
+                    src="images/icons/voice-search-icon.svg"></button>
         </div>
         <div class="right-section"><img class="">
-            <img class="upload-icon" src="YT-Music-files/images/icons/upload.svg" alt="">
-            <img class="youtube-app-icon" src="YT-Music-files/images/icons/youtube-apps.svg">
-            <img class="notification-icon" src="YT-Music-files/images/icons/notifications.svg" alt="">
-            <img class="my-profile-picture" src="YT-Music-files/images/profile-picture/my-channel.jpeg" alt="">
+            <img class="upload-icon" src="images/icons/upload.svg" alt="">
+            <img class="youtube-app-icon" src="images/icons/youtube-apps.svg">
+            <img class="notification-icon" src="images/icons/notifications.svg" alt="">
+            <img class="my-profile-picture" src="images/profile-picture/my-channel.jpeg" alt="">
         </div>
     </div>
     <!--Side bar menu of page-->
     <div class="side-bar-menu">
         <div class="side-bar">
-            <img src="YT-Music-files/images/icons/home.svg">
+            <img src="images/icons/home.svg">
             <div>Home</div>
         </div>
         <div class="side-bar">
-            <img src="YT-Music-files/images/icons/explore.svg">
+            <img src="images/icons/explore.svg">
             <div>Explore</div>
         </div>
         <div class="side-bar">
-            <img src="YT-Music-files/images/icons/subscriptions.svg">
+            <img src="images/icons/subscriptions.svg">
             <div>Subscriptions</div>
         </div>
         <div class="side-bar">
-            <img src="YT-Music-files/images/icons/originals.svg">
+            <img src="images/icons/originals.svg">
             <div>Originals</div>
         </div>
         <div class="side-bar">
-            <img src="YT-Music-files/images/icons/youtube-music.svg">
+            <img src="images/icons/youtube-music.svg">
             <div>YouTube Music</div>
         </div>
         <div class="side-bar">
-            <img src="YT-Music-files/images/icons/library.svg">
+            <img src="images/icons/library.svg">
             <div>Library</div>
         </div>
     </div>
@@ -72,9 +72,9 @@
     <div class="main-content-audio">
         <!--Right side of the page-->
         <div class="right-section">
-            <div class="audio-image"><img src="YT-Music-files/images/thumbnails/thumbnail-1.jpg"></div>
+            <div class="audio-image"><img src="images/thumbnails/thumbnail-1.jpg"></div>
             <div class="audio-player"><audio controls>
-                    <source src="YT-Music-files/song/videoplayback.ogg" type="audio/ogg">
+                    <source src="song/videoplayback.ogg" type="audio/ogg">
                 </audio></div>
             <div class="audio-title">Rondeau des fleurs et des rapieres</div>
         </div>
@@ -94,7 +94,7 @@
             <div class="audio-recomendation">
                 <div class="audio-recomendation-container">
                     <div class="reco-audio-image-title-author">
-                        <img src="YT-Music-files/images/thumbnails/thumbnail-2.png">
+                        <img src="images/thumbnails/thumbnail-2.png">
                         <div class="reco-audio-title-author">
                             <div class="reco-audio-title">ラグトレイン</div>
                             <div class="reco-audio-author">Inabakumori</div>
@@ -104,7 +104,7 @@
                 </div>
                 <div class="audio-recomendation-container">
                     <div class="reco-audio-image-title-author">
-                        <img src="YT-Music-files/images/thumbnails/thumbnail-3.png">
+                        <img src="images/thumbnails/thumbnail-3.png">
                         <div class="reco-audio-title-author">
                             <div class="reco-audio-title">Hello Bachooooo</div>
                             <div class="reco-audio-author">Alakh Pandey</div>
@@ -114,7 +114,7 @@
                 </div>
                 <div class="audio-recomendation-container">
                     <div class="reco-audio-image-title-author">
-                        <img src="YT-Music-files/images/thumbnails/thumbnail-4.png">
+                        <img src="images/thumbnails/thumbnail-4.png">
                         <div class="reco-audio-title-author">
                             <div class="reco-audio-title">Charas Ganja</div>
                             <div class="reco-audio-author">Carryminati</div>
@@ -124,7 +124,7 @@
                 </div>
                 <div class="audio-recomendation-container">
                     <div class="reco-audio-image-title-author">
-                        <img src="YT-Music-files/images/thumbnails/thumbnail-5.png">
+                        <img src="images/thumbnails/thumbnail-5.png">
                         <div class="reco-audio-title-author">
                             <div class="reco-audio-title">YOASOBI「アイドル」</div>
                             <div class="reco-audio-author">Ayase/YOASOBI</div>
@@ -134,7 +134,7 @@
                 </div>
                 <div class="audio-recomendation-container">
                     <div class="reco-audio-image-title-author">
-                        <img src="YT-Music-files/images/thumbnails/thumbnail-6.png">
+                        <img src="images/thumbnails/thumbnail-6.png">
                         <div class="reco-audio-title-author">
                             <div class="reco-audio-title">Judgment of Euthymia</div>
                             <div class="reco-audio-author">tnbee</div>
@@ -144,7 +144,7 @@
                 </div>
                 <div class="audio-recomendation-container">
                     <div class="reco-audio-image-title-author">
-                        <img src="YT-Music-files/images/thumbnails/thumbnail-7.png">
+                        <img src="images/thumbnails/thumbnail-7.png">
                         <div class="reco-audio-title-author">
                             <div class="reco-audio-title">Dance of Sumeru</div>
                             <div class="reco-audio-author">Chen Yupeng</div>
@@ -154,7 +154,7 @@
                 </div>
                 <div class="audio-recomendation-container">
                     <div class="reco-audio-image-title-author">
-                        <img src="YT-Music-files/images/thumbnails/thumbnail-8.png">
+                        <img src="images/thumbnails/thumbnail-8.png">
                         <div class="reco-audio-title-author">
                             <div class="reco-audio-title">Oracle</div>
                             <div class="reco-audio-author">HiFi-Audio</div>
@@ -164,7 +164,7 @@
                 </div>
                 <div class="audio-recomendation-container">
                     <div class="reco-audio-image-title-author">
-                        <img src="YT-Music-files/images/thumbnails/thumbnail-9.png">
+                        <img src="images/thumbnails/thumbnail-9.png">
                         <div class="reco-audio-title-author">
                             <div class="reco-audio-title">istanbul</div>
                             <div class="reco-audio-author">yousaobi</div>
@@ -174,7 +174,7 @@
                 </div>
                 <div class="audio-recomendation-container">
                     <div class="reco-audio-image-title-author">
-                        <img src="YT-Music-files/images/thumbnails/thumbnail-10.png">
+                        <img src="images/thumbnails/thumbnail-10.png">
                         <div class="reco-audio-title-author">
                             <div class="reco-audio-title">Funeral OST</div>
                             <div class="reco-audio-author">HOYO-MiX</div>
