fixed recomended video time not showing

--- a/Assignment-2/youtube-files/YouTube-player.html
+++ b/Assignment-2/youtube-files/YouTube-player.html
@@ -171,7 +171,7 @@
             <div class="video-recomended">
                 <div class="reco-vid-thumbnail">
                     <img src="images/thumbnail/CARRY.png">
-                    <div class="time-count"></div>
+                    <div class="time-count">69:00</div>
                 </div>
                 <div class="reco-vid-details">
                     <div class="title-author-views">
